# gerber_3d

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  gerber_explorer.ini  readme.md
gerber_explorer/: CMakeLists.txt
gerber_explorer/include/: Consolas.ttf.h  fa_regular_400.ttf.h  fa_solid_900.ttf.h  fonts.h  gdi_drawer.h  gl_base.h  gl_colors.h  gl_drawer.h  gl_function_list.h  gl_matrix.h  gl_window.h  log_drawer.h  occ_drawer.h  occ_viewer_interactor.h  polypartition.h  tesselator.h
gerber_explorer/source/: font.cpp  fonts.cpp  gdi_drawer.cpp  gerber_explorer.cpp  gl_base.cpp  gl_drawer.cpp  gl_functions.cpp  gl_matrix.cpp  gl_window.cpp  occ_drawer.cpp  occ_viewer.cpp  polypartition.cpp  tesselator.cpp
gerber_lib/: CMakeLists.txt
gerber_lib/include/: gerber_2d.h  gerber_aperture.h  gerber_arc.h  gerber_draw.h  gerber_entity.h  gerber_error.h  gerber_error_codes.h  gerber_image.h  gerber_lib.h  gerber_log.h  gerber_math.h  gerber_net.h  gerber_reader.h  gerber_stats.h  gerber_util.h
gerber_lib/source/: gerber_2d.cpp  gerber_aperture.cpp  gerber_image.cpp  gerber_lib.cpp  gerber_net.cpp  gerber_reader.cpp  gerber_stats.cpp  gerber_util.cpp
gerber_test_files/: arc_1.gbr  arc_2.gbr  test_outline_Copper_Signal_Top.gbr
gerber_util/: CMakeLists.txt
gerber_util/include/: gdi_drawer.h  gerber_settings.h  gerber_util.h  log_drawer.h  occ_drawer.h  occ_viewer.h
gerber_util/source/: gdi_drawer.cpp  gerber_explorer.cpp  gerber_settings.cpp  gerber_util.cpp  log_drawer.cpp  occ_drawer.cpp  occ_viewer.cpp  occ_viewer_interactor.cpp
